[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/mainTheme.tres" type="Theme" id=1]
[ext_resource path="res://menu/CreditsLabel.gd" type="Script" id=2]
[ext_resource path="res://audio/coin.wav" type="AudioStream" id=3]

[node name="CreditsLabel" type="Label"]
anchor_right = 1.0
margin_bottom = 17.0
theme = ExtResource( 1 )
text = "Credits: ???"
align = 1
script = ExtResource( 2 )

[node name="CountUpTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="AudioCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="timeout" from="CountUpTimer" to="." method="_on_CountUpTimer_timeout"]
